--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -1,92 +1,116 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Avito AAA</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" >
-  </head>
-  <body>
-    <nav class="navbar bg-light">
-      <div class="container-fluid">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+<nav class="navbar bg-light">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <svg width="109" height="30" viewBox="0 0 109 30" xmlns="http://www.w3.org/2000/svg">
-            <path d="m41.426.62-9.361 24.443h5.028l1.924-5.107h9.933l1.932 5.107h4.991L46.57.62h-5.144Zm-.683 14.85 3.27-8.6 3.256 8.6h-6.526Zm21.14 3.29-4.06-10.868h-4.797l6.539 17.17h4.755l6.423-17.17h-4.797L61.882 18.76ZM76.776 7.892h-4.565v17.17h4.565V7.892Zm-2.285-1.237a3.327 3.327 0 1 0 0-6.655 3.327 3.327 0 0 0 0 6.655ZM85.823 3.31h-4.552v4.552h-2.67v4.138h2.67v7.297c0 4.138 2.28 5.918 5.492 5.918a7.864 7.864 0 0 0 3.157-.617v-4.254c-.545.2-1.12.304-1.7.31-1.395 0-2.4-.542-2.4-2.4v-6.253h4.1V7.904h-4.097V3.311Zm13.694 4.27a8.898 8.898 0 1 0-.008 17.796 8.898 8.898 0 0 0 .008-17.795Zm0 13.244a4.333 4.333 0 1 1 4.329-4.333 4.323 4.323 0 0 1-4.329 4.316v.017Z" fill="#000"></path>
-            <circle cx="10.595" cy="5.225" r="3.325" fill="#965EEB"></circle>
-            <circle cx="22.245" cy="7.235" r="7.235" fill="#0AF"></circle>
-            <circle cx="8.9" cy="18.6" r="8.9" fill="#04E061"></circle>
-            <circle cx="24.325" cy="21.005" r="5.375" fill="#FF4053"></circle>
-          </svg>
+            <svg width="109" height="30" viewBox="0 0 109 30" xmlns="http://www.w3.org/2000/svg">
+                <path d="m41.426.62-9.361 24.443h5.028l1.924-5.107h9.933l1.932 5.107h4.991L46.57.62h-5.144Zm-.683 14.85 3.27-8.6 3.256 8.6h-6.526Zm21.14 3.29-4.06-10.868h-4.797l6.539 17.17h4.755l6.423-17.17h-4.797L61.882 18.76ZM76.776 7.892h-4.565v17.17h4.565V7.892Zm-2.285-1.237a3.327 3.327 0 1 0 0-6.655 3.327 3.327 0 0 0 0 6.655ZM85.823 3.31h-4.552v4.552h-2.67v4.138h2.67v7.297c0 4.138 2.28 5.918 5.492 5.918a7.864 7.864 0 0 0 3.157-.617v-4.254c-.545.2-1.12.304-1.7.31-1.395 0-2.4-.542-2.4-2.4v-6.253h4.1V7.904h-4.097V3.311Zm13.694 4.27a8.898 8.898 0 1 0-.008 17.796 8.898 8.898 0 0 0 .008-17.795Zm0 13.244a4.333 4.333 0 1 1 4.329-4.333 4.323 4.323 0 0 1-4.329 4.316v.017Z"
+                      fill="#000"></path>
+                <circle cx="10.595" cy="5.225" r="3.325" fill="#965EEB"></circle>
+                <circle cx="22.245" cy="7.235" r="7.235" fill="#0AF"></circle>
+                <circle cx="8.9" cy="18.6" r="8.9" fill="#04E061"></circle>
+                <circle cx="24.325" cy="21.005" r="5.375" fill="#FF4053"></circle>
+            </svg>
         </a>
-      </div>
-    </nav>
+    </div>
+</nav>
 
+{% if not (image or error) %}
     <div class="container text-center col-8">
-      <h1 class="display-3">
-        Занятие ААА по фронтенду
-      </h1>
+        <h1 class="display-3">
+            Занятие ААА по фронтенду
+        </h1>
     </div>
+{% endif %}
 
+{% if error %}
     <div class="container col-6 mt-4 alert alert-danger">
-      Some Nasty Error :(
+        {{ error }}
     </div>
+{% endif %}
 
+{% if image %}
     <div class="container text-center col-8 mt-4">
-      <figure class="figure">
-        <img class="img-fluid rounded mx-auto" src="{{ image }}">
-        <figcaption class="figure-caption text-end">
-          рамками выделены полигоны с текстом
-        </figcaption>
-      </figure>
+        <figure class="figure">
+            <img class="img-fluid rounded mx-auto" src="{{ image }}">
+            <figcaption class="figure-caption text-end">
+                рамками выделены полигоны с текстом
+            </figcaption>
+        </figure>
     </div>
+{% endif %}
 
+{% if words %}
     <div class="container col-6">
-      <table class="table mx-auto">
-        <thead>
-          <tr>
-            <th scope="col">изображение</th>
-            <th scope="col">слово</th>
-            <th scope="col">точность</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <img src="" alt="IMG">
-            </td>
-            <td>WORD</td>
-            <td class="">
-              99.9%
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="" alt="IMG">
-            </td>
-            <td>WORD</td>
-            <td class="">
-              99.9%
-            </td>
-          </tr>
-        </tbody>
-      </table>
+        <table class="table mx-auto">
+            <thead>
+            <tr>
+                <th scope="col">изображение</th>
+                <th scope="col">слово</th>
+                <th scope="col">точность</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for word in words %}
+                <tr>
+                    <td>
+                        <img src="{{ word.image }}">
+                    </td>
+                    <td>{{ word.word }}</td>
+                    <td class="
+                       {% if word.accuracy > 0.95 %}
+                       table-success
+                       {% elif word.accuracy > 0.8 %}
+                       table-warning
+                       {% elif word.accuracy < 0.5 %}
+                       table-danger
+                       {% endif %}
+                       ">
+                        {{ "%.2f"|format(word.accuracy * 100) }}%
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
+{% endif %}
 
-    <form class="container col-6 p-4 mt-4 border rounded" method="POST" enctype="multipart/form-data">
-      <div class="mb-3">
+<form class="container col-6 p-4 mt-4 border rounded" method="POST" enctype="multipart/form-data">
+    <div class="mb-3">
         <label class="form-label" for="image">Выберите изображение для распознования текста</label>
-        <input class="form-control" type="file" name="image" id="image" accept="image/jpeg">
-        <label class="form-text" for="image">распознование доступно только на английском языке</label>
-      </div>
-      <div class="mb-3">
-        <input class="btn btn-primary" type="submit" id="submit" value="загрузить">
-      </div>
-    </form>
-
-    <div class="container mt-4">
-      <p class="text-center text-muted">© 2023 Академия Аналитиков Авито</p>
+        <input class="form-control" type="file" name="image" id="image" accept="image/*">
+        <label class="form-text" for="image">распознование доступно только на английском или русском языке</label>
     </div>
+    <div class="mb-3">
+        <label for="min_accuracy" class="form-label">Минимальная точность</label>
+        <input type="range" class="form-control-range" id="min_accuracy"
+               onInput="$('#rangeval').html($(this).val())" name="min_accuracy">
+        <span id="rangeval">50<!-- Default value --></span>
+        <input class="btn btn-primary" type="submit" id="submit"
+               value="Распознать текст {% if words %} снова{% endif %}">
+    </div>
+</form>
 
-    <script src="static/js/bootstrap.bundle.min.js" ></script>
-  </body>
+<div class="container mt-4">
+    <p class="text-center text-muted">© 2023 Академия Аналитиков Авито</p>
+</div>
+
+<script src="../static/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
 </html>
