--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -21,72 +21,16 @@
       </div>
     </nav>
 
-    <div class="container text-center col-8">
-      <h1 class="display-3">
-        Занятие ААА по фронтенду
-      </h1>
+    <!-- отсюда можно удалять -->
+    <div class="container">
+      <p class="text-center">Шаблон подключился! Теперь на его базе можно начинать делать веб приложение.</p>
+      <p class="text-center">Удали этот блок и скопируй сюда содержимое тега <code>body</code> из домашнего задания с занятия 2.</p>
     </div>
+    <!-- всё что ниже лучше оставить -->
 
-    <div class="container col-6 mt-4 alert alert-danger">
-      Some Nasty Error :(
-    </div>
-
-    <div class="container text-center col-8 mt-4">
-      <figure class="figure">
-        <img class="img-fluid rounded mx-auto" src="{{ image }}">
-        <figcaption class="figure-caption text-end">
-          рамками выделены полигоны с текстом
-        </figcaption>
-      </figure>
-    </div>
-
-    <div class="container col-6">
-      <table class="table mx-auto">
-        <thead>
-          <tr>
-            <th scope="col">изображение</th>
-            <th scope="col">слово</th>
-            <th scope="col">точность</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <img src="" alt="IMG">
-            </td>
-            <td>WORD</td>
-            <td class="">
-              99.9%
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="" alt="IMG">
-            </td>
-            <td>WORD</td>
-            <td class="">
-              99.9%
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <form class="container col-6 p-4 mt-4 border rounded" method="POST" enctype="multipart/form-data">
-      <div class="mb-3">
-        <label class="form-label" for="image">Выберите изображение для распознования текста</label>
-        <input class="form-control" type="file" name="image" id="image" accept="image/jpeg">
-        <label class="form-text" for="image">распознование доступно только на английском языке</label>
-      </div>
-      <div class="mb-3">
-        <input class="btn btn-primary" type="submit" id="submit" value="загрузить">
-      </div>
-    </form>
-
-    <div class="container mt-4">
-      <p class="text-center text-muted">© 2023 Академия Аналитиков Авито</p>
-    </div>
-
+    <footer class="container mt-5">
+        <p class="text-center text-muted">© 2024 Академия Аналитиков Авито</p>
+    </footer>
     <script src="static/js/bootstrap.bundle.min.js" ></script>
   </body>
 </html>
