--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -15,12 +15,40 @@
       </div>
     </nav>
 
-    <!-- отсюда можно удалять -->
     <div class="container">
-      <p class="text-center">Шаблон подключился! Теперь на его базе можно начинать делать веб приложение.</p>
-      <p class="text-center">Удали этот блок и скопируй сюда содержимое тега <code>body</code> из домашнего задания с занятия 2.</p>
+      <h1>Распознавание текста на изображении</h1>
+      {% if error %}
+      <p class="error text-danger">Ошибка: {{ error }}.</p>
+      {% endif %}
+      <img src="{{ image }}" alt="Результат распознавания" class="img-fluid">
+      <form action="/" method="post" enctype="multipart/form-data">
+          <div class="form-group">
+              <input type="file" name="image" accept=".png, .jpg, .jpeg" class="form-control-file">
+          </div>
+          <button type="submit" class="btn btn-primary">Загрузить</button>
+      </form>
+      <div class="mt-4">
+          <h2>Результаты распознавания:</h2>
+          <table class="table">
+              <thead>
+                  <tr>
+                      <th scope="col">Изображение</th>
+                      <th scope="col">Слово</th>
+                      <th scope="col">Точность</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  {% for entry in words %}
+                  <tr>
+                      <td><img src="{{ entry.image }}" class="img-fluid"></td>
+                      <td>{{ entry.word }}</td>
+                      <td>{{ entry.accuracy }}</td>
+                  </tr>
+                  {% endfor %}
+              </tbody>
+          </table>
+      </div>
     </div>
-    <!-- всё что ниже лучше оставить -->
 
     <footer class="container mt-5">
         <p class="text-center text-muted">© 2024 Академия Аналитиков Авито</p>
