--- a/lib/templates/index.html
+++ b/lib/templates/index.html
@@ -16,10 +16,68 @@
     </nav>
 
     <!-- отсюда можно удалять -->
-    <div class="container">
-      <p class="text-center">Шаблон подключился! Теперь на его базе можно начинать делать веб приложение.</p>
-      <p class="text-center">Удали этот блок и скопируй сюда содержимое тега <code>body</code> из домашнего задания с занятия 2.</p>
+    {% if not error and not image%}
+    <h1 class="display-1 text-center">Привет, ААА!</h1>
+    {% endif %}
+
+    {% if error %}
+    <div class="container-md col-8">
+        <div class="alert alert-danger m-5" role="alert">
+            {{ error }}
+          </div>
     </div>
+    {% endif %}
+
+    {% if image %}
+    <div class="container-md text-center mb-3">
+        <img class="img-fluid rounded-3" src="{{ image }}" alt="Placeholder Image">
+    </div>
+    {% endif %}
+
+    <div class="container-md col-8">
+    <form class="border rounded-5 border-3 m-5 p-3" method="POST" enctype="multipart/form-data">
+        <div class="mb-3">
+            <label for="formFile" class="form-label">Загрузите изображение для распознавания текста на нём</label>
+            <input class="form-control" type="file" id="formFile" name="image">
+          </div>
+        <button type="submit" class="btn btn-primary">Распознать текст</button>
+      </form>
+    </div>
+
+    {% if words %}
+    <div class="container-md col-7">
+        <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Изображения</th>
+                <th scope="col">Слово</th>
+                <th scope="col">Вероятность</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for word in words %}
+              <tr>
+                <th scope="row">{{ loop.index }}</th>
+                <td><img src="{{ word.image }}" alt="img1"/></td>
+                <td>{{ word.word }}</td>
+                <td 
+                class="{% if word.accuracy > 0.9 %}
+                        table-success
+                        {% elif word.accuracy > 0.6 and word.accuracy <= 0.9 %}
+                        table-warning
+                        {% else %}
+                        table-danger
+                        {% endif %} fw-bold
+                ">
+                {{ "%2.2f" | format(word.accuracy*100) }}%</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+    </div>
+    {% endif %}
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
     <!-- всё что ниже лучше оставить -->
 
     <footer class="container mt-5">
