--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Avito AAA</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <nav class="navbar bg-light">
@@ -15,16 +15,16 @@
       </div>
     </nav>
 
-    <!-- отсюда можно удалять -->
+    <!-- этот блок можно удалять -->
     <div class="container">
       <p class="text-center">Шаблон подключился! Теперь на его базе можно начинать делать веб приложение.</p>
       <p class="text-center">Удали этот блок и скопируй сюда содержимое тега <code>body</code> из домашнего задания с занятия 2.</p>
     </div>
-    <!-- всё что ниже лучше оставить -->
+    <!-- блок выше можно удалять -->
 
     <footer class="container mt-5">
-        <p class="text-center text-muted">© 2024 Академия Аналитиков Авито</p>
+        <p class="text-center text-muted">© 2025 Академия Аналитиков Авито</p>
     </footer>
-    <script src="static/js/bootstrap.bundle.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
