--- a/templates/index.html
+++ b/templates/index.html
@@ -3,37 +3,93 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Avito AAA</title>
+    <title> T-recs </title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
     />
   </head>
   <body>
-    <nav class="navbar bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <img src="/static/avito.svg" alt="avito" />
-        </a>
-      </div>
-    </nav>
-
-    <!-- этот блок можно удалять -->
-    <div class="container">
-      <p class="text-center">
-        Шаблон подключился! Теперь на его базе можно начинать делать веб
-        приложение.
-      </p>
-      <p class="text-center">
-        Удали этот блок и скопируй сюда содержимое тега <code>body</code> из
-        домашнего задания с занятия 2.
-      </p>
+    {% if not words and not error %}
+    <div class="container mt-3">
+      <h1 class="display-1 text-center">Тут будет динозавр</h1>
     </div>
-    <!-- блок выше можно удалять -->
+    {% endif %}
+    {% if error %}
+    <div class="container mt-4">
+      <div class="alert alert-danger">какая-то ошибка!</div>
+    </div>
+    {% endif %}
+    
+    {% if image %}
+    <div class="container mt-5">
+      <img
+        class="rounded mx-auto d-block"
+        src="{{ image }}"
+        alt="Ти-рекс"
+      />
+    </div>
+    {% endif %}
 
-    <footer class="container mt-5">
-      <p class="text-center text-muted">© 2025 Академия Аналитиков Авито</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <div class="container mt-4">
+      <form class="border border-1 rounded-3 p-3"
+            method="post"
+            enctype="multipart/form-data"
+            >
+        <div class="mb-3">
+          <label for="formFile" class="form-label">
+            загрузите изображение для распознавания
+          </label>
+          <input class="form-control" type="file" name="file" id="formFile" />
+        </div>
+
+        <button type="submit" class="btn btn-primary">распознать</button>
+      </form>
+    </div>
+
+    {% if words %}
+    <div class="container mt-4">
+      <table class="table table-bordered table-hover ">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Слово</th>
+            <th scope="col">Точность</th>
+            <th scope="col">Изображение</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for word in words %}
+          <tr>
+            <th scope="row">1</th>
+            <td>{{ word.word}} </td>
+            <td 
+              class="
+              {% if word.accuracy > 0.95  %}
+              table-success
+              {% elif word.accuracy > 0.8 %}
+              table-warning
+              {% else %}
+              table-danger
+              {% endif %}
+              "
+                >{{ "%0.2f" | format (word.accuracy * 100)}}</td>
+            <td> <img src={{word.image}}> </td>
+          </tr>
+          {% endfor%}
+        </tbody>
+      </table>
+    </div>
+    {% endif %}
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
