--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <nav class="navbar bg-light">
       <div class="container-fluid">
@@ -18,18 +19,74 @@
       </div>
     </nav>
 
-    <!-- этот блок можно удалять -->
-    <div class="container">
-      <p class="text-center">
-        Шаблон подключился! Теперь на его базе можно начинать делать веб
-        приложение.
-      </p>
-      <p class="text-center">
-        Удали этот блок и скопируй сюда содержимое тега <code>body</code> из
-        домашнего задания с занятия 2.
-      </p>
+    {% if not words and not error and not image %}
+    <div class="container mt-4">
+        <h1 class="display-1 text-center">Определи номер по изображению!</h1>
     </div>
-    <!-- блок выше можно удалять -->
+    {% endif %}
+
+    {% if error %}
+    <div class="container mt-4">
+      <div class="alert alert-danger" role="alert">
+        <h3>{{ error.exception }}</h3>
+        <div>{{ error.text }}</div>
+      </div>
+    </div>
+    {% endif %}
+
+    {% if image %}
+    <div class="container mt-4">
+        <img
+            class="img-fluid rounded-3"
+            src="{{ image }}"
+            alt="car_num_welcome_img"
+        />
+    </div>
+    {% endif %}
+
+    <div class="container mt-4">
+        <form class="border rounded-3 p-3" method="post" enctype="multipart/form-data">
+            <div class="mb-3">
+                <label for="formFile" class="form-label">
+                  Выбери изображение с номерами
+                </label>
+                <input class="form-control" type="file" name="file" id="formFile">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Определить</button>
+        </form>
+    </div>
+
+    {% if words %}
+    <div class="container mt-4">
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Номер</th>
+                <th scope="col">Точность</th>
+                <th scope="col">Изображение</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for word in words %}
+              <tr>
+                <td>{{ word.word }}</td>
+                <td class="
+                {% if word.accuracy > 0.95 %}
+                table-success
+                {% elif word.accuracy > 0.85 %}
+                table-warning
+                {% elif word.accuracy < 0.5 %}
+                table-danger
+                {% endif %}">{{ "%2.2f" | format(word.accuracy * 100) }}%</td>
+                <td><img src="{{ word.image }}" /></td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+    </div>
+    {% endif %}
+
 
     <footer class="container mt-5">
       <p class="text-center text-muted">© 2025 Академия Аналитиков Авито</p>
