--- a/templates/index.html
+++ b/templates/index.html
@@ -18,18 +18,68 @@
       </div>
     </nav>
 
-    <!-- этот блок можно удалять -->
-    <div class="container">
-      <p class="text-center">
-        Шаблон подключился! Теперь на его базе можно начинать делать веб
-        приложение.
-      </p>
-      <p class="text-center">
-        Удали этот блок и скопируй сюда содержимое тега <code>body</code> из
-        домашнего задания с занятия 2.
-      </p>
+    {% if not words and not error %}
+    <div class="container mt-4">
+      <h1 class="display-1 text-center">Привет, Академия!</h1>
     </div>
-    <!-- блок выше можно удалять -->
+    {% endif %}
+    
+    {% if error %}
+    <div class="container mt-4">
+      <div class="alert alert-danger" role="alert">
+          {{error}}
+      </div>
+    </div>
+    {% endif %}    
+    
+    {% if image %}
+    <div class="container mt-4">
+      <img
+      style="max-width: 500px; height: auto;"
+      class="rounded mx-auto d-block img-fluid" 
+      src="{{ image }}">
+    </div>
+    {% endif %}
+
+    <div class="container mt-4">
+      <form class="border border-2 rounded-3 p-4" method="POST" enctype="multipart/form-data">
+          <div class="mb-3">
+              <label for="formFile" class="form-label">Загрузите файл для распознавания</label>
+              <input class="form-control" type="file" name="file" id="formFile">
+          </div>
+          <button type="submit" class="btn btn-primary">Распознать</button>
+      </form>
+    </div>
+
+    {% if words %}
+    <div class="container mt-5">
+      <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Слово</th>
+              <th scope="col">Точность</th>
+              <th scope="col">Изображение</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for word in words %}
+            <tr>
+              <td>{{ word.word }}</td>
+              <td class=
+              "{% if word.accuracy > 0.95 %} table-success 
+              {% elif word.accuracy > 0.85 %} table-warning 
+              {% elif word.accuracy < 0.5 %} table-danger 
+              {% endif %}">
+              {{ "%0.2f" | format(word.accuracy * 100) }}
+              </td>
+              <td><img src="{{ word.image }}" /></td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+    </div>
+    {% endif %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 
     <footer class="container mt-5">
       <p class="text-center text-muted">© 2025 Академия Аналитиков Авито</p>
